src/components/dashboard.css
.dashboardContainer {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #f0f0f0; /* Change this to your desired background color */
  z-index: 9999; /* Ensure it's on top of other elements */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.dashboard-content {
  text-align: center;
  background-color: #ffffff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.navbar {
  background-color: #000000;
  width: 100%;
  padding: 10px 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #ffffff;
}

.navbar-brand {
  font-size: 1.8rem;
}

.navbar-nav {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.nav-item {
  margin-left: 16px;
  margin-right: 16px;
}

.nav-link {
  color: #ffffff;
  text-decoration: none;
  font-size: 1.2rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.content {
  margin-top: 60px;
  padding: 16px;
}

.criteria-info {
  margin-top: 20px;
}

.criteria-info h3 {
  margin-top: 10px;
}

.criteria-info p {
  margin: 5px 0;
}

